# zenedu-keycrm-integration

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
apps/common/: utils.py
apps/keycrm/: admin.py  apps.py  clients.py  entities.py  models.py  services.py  tasks.py  use_cases.py  utils.py
apps/keycrm/migrations/: 0001_initial.py  0002_alter_integration_options.py
apps/wayforpay/: apps.py  client.py  entities.py  utils.py
apps/webhook/: serializers.py  urls.py  views.py
apps/zenedu/: admin.py  apps.py  clients.py  entities.py  models.py  services.py  tasks.py  use_cases.py
apps/zenedu/migrations/: 0001_initial.py  0002_order.py  0003_subscriber_email.py  0004_alter_order_payment_system_type.py
config/: __init__.py  celery.py  containers.py  urls.py
config/settings/: base.py  local.py  production.py
nginx/: nginx.conf
nginx/configs/: prod.conf
